--- a/portfolio.html
+++ b/portfolio.html
@@ -82,6 +82,10 @@
             	<i>Coming Soon</i>
             	</p>
             	</br>
+          <h3>Security Audit</h3>
+            	<p>
+            	<a href="https://github.com/matt-ober1/security-audit">Github Repository</a>
+            	</p>
             	<h3>Incident Handlers Journal</h3>
             	<p>
             	<i>Coming Soon</i>
