--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,7 @@
       }
     </style>
   </head>
-</br>
-</head>
-<body>
+  <body>
     <header>
         <h1>Matthew Oberholtzer</h1>
         <nav>
@@ -63,58 +61,33 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="socials.html">Social Accounts</a></li>
-                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't Click Me!</a></li>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't Click Me!</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h2>My Portfolio</h2>
-            	</br>
-            	</br>
-            	<h3>Professional Statement</h3>
-            	<p>
-            	<a href="https://github.com/matt-ober1/Portfolio/blob/main/Professional%20Statement.md">Document</a>
-            	</br>
-            	</br>
-            	<h3>TryHackMe Journal</h3>
-            	<p>
-            	<i>Coming Soon</i>
-            	</p>
-            	</br>
-          <h3>Security Audit</h3>
-            	<p>
-            	<a href="https://github.com/matt-ober1/security-audit">Github Repository</a>
-            	</p>
-            	<h3>Incident Handlers Journal</h3>
-            	<p>
-            	<i>Coming Soon</i>
-            	</p>
-            	</br>
-            	<h3>Vulnerable Systems Analysis</h3>
-            	<p>
-            	 <i>Coming Soon</i>
-            	 </p>
-            	 </br>
-            	 <h3>SQL Query</h3>
-            	 <p>
-            	 <i>Coming Soon</i>
-            	 </p>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
-            	 </br>
+            <h3>Professional Statement</h3>
+            <p>
+                <a href="https://github.com/matt-ober1/Portfolio/blob/main/Professional%20Statement.md">Document</a>
+            </p>
+            <h3>TryHackMe Journal</h3>
+            <p><i>Coming Soon</i></p>
+            <h3>Security Audit</h3>
+            <p>
+                <a href="https://github.com/matt-ober1/security-audit">Github Repository</a>
+            </p>
+            <h3>Incident Handlers Journal</h3>
+            <p><i>Coming Soon</i></p>
+            <h3>Vulnerable Systems Analysis</h3>
+            <p><i>Coming Soon</i></p>
+            <h3>SQL Query</h3>
+            <p><i>Coming Soon</i></p>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Matthew Oberholtzer. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
