--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <title>Matt</title>
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/halfmoon.min.css" rel="stylesheet" integrity="sha256-SsJizWSIG9JT9Qxbiy8xnYJfjCAkhEQ0hihxRn7jt2M=" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/css/cores/halfmoon.modern.css" rel="stylesheet" integrity="sha256-DD6elX+jPmbFYPsGvzodUv2+9FHkxHlVtQi0/RJVULs=" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-VNhshjmt6ftofSR8GxsiB7pN8TxOrMvj4yo1FvCBaxXXAgABqSNj0FZrhnpR2fxe" crossorigin="anonymous">
     <style>
       body {
         background-color: #000;
@@ -50,45 +49,37 @@
         display: block;
         margin: 0 auto;
       }
-      .social-icons a {
-        color: #fff;
-        font-size: 30px;
-        margin-right: 15px;
-        text-decoration: none;
-      }
-      .social-icons a:hover {
-        color: #800080;
-      }
     </style>
   </head>
-  <body>
+</br>
+<body>
     <header>
-      <h1>Matthew Oberholtzer</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="socials.html">Social Accounts</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't Click Me!</a></li>
-        </ul>
-      </nav>
+        <h1>Matthew Oberholtzer</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="socials.html">Social Accounts</a></li>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't Click Me!</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <section>
-        <h2>Feel free to add me as a friend or connect with me on one of these!</h2>
-        <div class="social-icons">
-          <a href="https://www.linkedin.com/in/matthew-oberholtzer-545623321" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/matt-ober1" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-      </section>
+        <section>
+            <h2>Feel free to add me as a friend or connect with me on one of these!</h2>
+            <br>
+            <h3>
+            <ul>
+            <a href="https://www.linkedin.com/in/matthew-oberholtzer-545623321">LinkedIn</a></li>
+            <br>
+            <br>
+            <a href="https://github.com/matt-ober1">Github</a></li>
+            <br>
+            </ul>
+            </h3>
+        </section>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/js/halfmoon.min.js" integrity="sha256-xN5L8RUmVeHOGXG9t5Dr1ccPhx7o4+OTlJY9tr2skU8=" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
-
