--- a/socials.html
+++ b/socials.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-core="modern" data-bs-theme="dark">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matt</title>
@@ -50,8 +50,7 @@
         margin: 0 auto;
       }
     </style>
-  </head>
-</br>
+</head>
 <body>
     <header>
         <h1>Matthew Oberholtzer</h1>
@@ -72,10 +71,10 @@
             <br>
             <h3>
             <ul>
-            <a href="https://www.linkedin.com/in/matthew-oberholtzer-545623321">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/matthew-oberholtzer-545623321">LinkedIn</a></li>
             <br>
             <br>
-            <a href="https://github.com/matt-ober1">Github</a></li>
+            <li><a href="https://github.com/matt-ober1">Github</a></li>
             <br>
             </ul>
             </h3>
@@ -99,9 +98,5 @@
 
     <!-- Halfmoon JS -->
     <script src="https://cdn.jsdelivr.net/npm/halfmoon@2.0.1/js/halfmoon.min.js" integrity="sha256-xN5L8RUmVeHOGXG9t5Dr1ccPhx7o4+OTlJY9tr2skU8=" crossorigin="anonymous"></script>
-
-  
-        });
-    </script>
 </body>
 </html>
