--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,9 @@
                 <a href="https://github.com/matt-ober1/Portfolio/blob/main/Professional%20Statement.md">Document</a>
             </p>
             <h3>TryHackMe Journal</h3>
-            <p><i>Coming Soon</i></p>
+            <p>
+              <a href="https://docs.google.com/document/d/10ApOFWMJuHve3VLFELXhy48HVXK3hoyUkVS-7WIF9mM/edit?usp=sharing">Document</a><
+                                                                                                                                       </p>                                                                                                                        
             <h3>Security Audit</h3>
             <p>
                 <a href="https://github.com/matt-ober1/security-audit">Github Repository</a>
