--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
             <h3>Incident Handlers Journal</h3>
             <p><i>Coming Soon</i></p>
             <h3>Vulnerable Systems Analysis</h3>
-            <p><i>Coming Soon</i></p>
+            <a href="https://docs.google.com/document/d/1Nv6QryPE1M3UmoMi4wkzYdT8w1cAO7c4i4gFt2jHUXE/edit?usp=sharing">Document</a>
             <h3>SQL Query</h3>
             <p><i>Coming Soon</i></p>
         </section>
