--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,8 @@
             <p><i>Coming Soon</i></p>
             <h3>Vulnerable Systems Analysis</h3>
             <a href="https://docs.google.com/document/d/1Nv6QryPE1M3UmoMi4wkzYdT8w1cAO7c4i4gFt2jHUXE/edit?usp=sharing">Document</a>
-            <h3>SQL Query</h3>
-            <p><i>Coming Soon</i></p>
+            <h3>SQL Querys</h3>
+             <a href="https://drive.google.com/file/d/1U6J8TtFWzt0FM-iINU7mLnDNztgJQqLa/view?usp=sharing">Document</a>
         </section>
     </main>
     <!-- JavaScript -->
