--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
             </p>
             <h3>TryHackMe Journal</h3>
             <p>
-              <a href="https://docs.google.com/document/d/10ApOFWMJuHve3VLFELXhy48HVXK3hoyUkVS-7WIF9mM/edit?usp=sharing">Document</a><
+              <a href="https://docs.google.com/document/d/10ApOFWMJuHve3VLFELXhy48HVXK3hoyUkVS-7WIF9mM/edit?usp=sharing">Document</a>
                                                                                                                                        </p>                                                                                                                        
             <h3>Security Audit</h3>
             <p>
