--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,11 @@
             <h3>TryHackMe Journal</h3>
             <p>
               <a href="https://docs.google.com/document/d/10ApOFWMJuHve3VLFELXhy48HVXK3hoyUkVS-7WIF9mM/edit?usp=sharing">Document</a>
-                                                                                                                                       </p>                                                                                                                        
+                                                                                                                                       </p>     
+          <h3>CTF Writeups</h3>
+          <p>
+            <a href="https://app.gitbook.com/invite/wkbMkMJht1KdakFlgG9a/9moHoiifDGPmJnEeVVG4">Gitbook>/a>
+          </p>
             <h3>Security Audit</h3>
             <p>
                 <a href="https://github.com/matt-ober1/security-audit">Github Repository</a>
