--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="me.jpg" alt="me!" />
       <h1>Matthew Oberholtzer</h1>
       <section class="typewriter">
-        <h2>Welcome to my cybersecurity portfolio website! </h2>
+        <h2>Offensive Security and Malware Reverse Engineering Enthusiast </h2>
       </section>
     </header>
     <main>
