--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Matthew Oberholtzer</title>
     <link rel="stylesheet" href="style.css" />
 
-   
+    <link
+      href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body>
+  <body style="font-family: 'VT323', monospace;">
     <section id="bg"></section>
     <header>
-    
       <img src="me.jpg" alt="me!" />
       <h1>Matthew Oberholtzer</h1>
       <section class="typewriter">
@@ -24,7 +27,7 @@
     </header>
     <main>
       <nav id="btn-group">
-         <a href="about.pdf" class="button" target="_blank">About Me!</a>
+        <a href="about.pdf" class="button" target="_blank">About Me!</a>
         <a href="Resume.pdf" class="button" target="_blank">Download My Resume</a>
         <a href="https://my-chaotic-knowledge-brainchild.gitbook.io/capture-the-flag-writeups-matthew-oberholtzer" class="button">CTF Writeups</a>
         <a href="https://github.com/matt-ober1/security-audit" class="button">Security Audit</a>
@@ -39,35 +42,39 @@
       <div class="push"></div>
     </div>
     <footer>
-        <nav class="navbar">
-          <ul>
-            <li>
-              <a href="https://www.linkedin.com/in/matthew-oberholtzer/"
-                ><i class="fa fa-linkedin" style="font-size: 36px"></i>
+      <nav class="navbar">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/matthew-oberholtzer/">
+              <i class="fa fa-linkedin" style="font-size: 36px"></i>
             </a>
-            </li>
-            <li>
-              <a href="https://github.com/matt-ober1">
-                <i class="fa fa-github-square" style="font-size: 36px"></i></a>
-            </li>
-            <li>
-              <a href="mailto:matthew.oberholtzer04@gmail.com"
-                ><i class="fa fa-envelope" style="font-size: 36px"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/crashoutcago/profilecard/?igsh=MW1nazh3bTAydzVlNA=="
-                ><i class="fa fa-instagram" style="font-size: 36px"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://open.spotify.com/user/31uajl3mij5fn2qk6nalnb46mlya?si=d453027f1d3a40a8"
-                ><i class="fa fa-spotify" style="font-size: 36px"></i
-              ></a>
-            </li>
-          </ul>
-        </nav>
-        </div>
+          </li>
+          <li>
+            <a href="https://github.com/matt-ober1">
+              <i class="fa fa-github-square" style="font-size: 36px"></i>
+            </a>
+          </li>
+          <li>
+            <a href="mailto:matthew.oberholtzer04@gmail.com">
+              <i class="fa fa-envelope" style="font-size: 36px"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/crashoutcago/profilecard/?igsh=MW1nazh3bTAydzVlNA==">
+              <i class="fa fa-instagram" style="font-size: 36px"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://open.spotify.com/user/31uajl3mij5fn2qk6nalnb46mlya?si=d453027f1d3a40a8">
+              <i class="fa fa-spotify" style="font-size: 36px"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
+</html>
+
     </footer>
   </body>
 </html>
