--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         <a href="Resume.pdf" class="button" target="_blank">Download My Resume</a>
         <a href="https://my-chaotic-knowledge-brainchild.gitbook.io/capture-the-flag-writeups-matthew-oberholtzer" class="button">CTF Writeups</a>
         <a href="https://github.com/matt-ober1/security-audit" class="button">Security Audit</a>
-        <a href="https://docs.google.com/document/d/1Nv6QryPE1M3UmoMi4wkzYdT8w1cAO7c4i4gFt2jHUXE/edit?usp=sharing" class="button">Vulnerable Systems Analysis</a>
+        <a href="vuln.pdf">Vulnerable Systems Analysis</a>
         <a href="https://drive.google.com/file/d/1U6J8TtFWzt0FM-iINU7mLnDNztgJQqLa/view?usp=sharing" class="button">SQL Query</a>
-        <a href="https://docs.google.com/document/d/1FE_FPwcxLhOp1EleqwafwyA6UIJ_Xj7zl0QFULljHk8/edit?usp=sharing" class="button">Incident Handlers Journal</a>
+        <a href="handler.pdf" class="button">Incident Handlers Journal</a>
         <a href="https://my-chaotic-knowledge-brainchild.gitbook.io/matts-black-book-of-hacks" class="button">Matt's Black Book of Hacks(THM Journal)</a>
+        <a href="python.pdf" class="button">Python Algorithms</a>
       </nav>
     </main>
     <section id="space"></section>
