--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <nav id="btn-group">
         <a href="about.pdf" class="button" target="_blank">About Me!</a>
-        <a href="Resume.pdf" class="button" target="_blank">Download My Resume</a>
+        <a href="Matthew_Oberholtzer_Resume.pdf" class="button" target="_blank">Download My Resume</a>
         <a href="https://my-chaotic-knowledge-brainchild.gitbook.io/capture-the-flag-writeups-matthew-oberholtzer" class="button">CTF Writeups</a>
         <a href="https://github.com/matt-ober1/security-audit" class="button">Security Audit</a>
         <a href="vuln.pdf" class="button">Vulnerable Systems Analysis</a>
